[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "*"
serde_json = "*"
serde_yaml= "*"
actix-files = "0.3.*"
actix-web-middleware-redirect-scheme = "3.0.0"
